# suricate

./: .typos.toml  Cargo.toml  README.md  index.html
assets/: gen_assets.sh  manifest.json  sw.js
src/: app.rs  central_panel.rs  lib.rs  main.rs  panels.rs
src/gedcom/: mod.rs  parser.rs  tokenizer.rs  types.rs
src/windows/: mod.rs  search_table.rs
