[package]
name = "suricate"
version = "0.1.0"
authors = ["n4n5 <its.just.n4n5@gmail.com>"]
edition = "2024"
description = "A gedcom viewer"
license = "MIT"
homepage = "https://suricate.n4n5.dev/"
repository = "https://github.com/Its-Just-Nans/suricate"
documentation = "https://docs.rs/suricate"
keywords = ["gedcom", "genealogy"]
categories = ["visualization"]


[dependencies]
bladvak = "1.3.2"
ged_io = { version = "0.13.0", features = ["json"] }
# bladvak = { path = "../bladvak" }
serde = "1.0.228"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

